--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,37 @@
-aiohttp==3.9.5
-aiosignal==1.3.1
-annotated-types==0.6.0
-anyio==4.3.0
-attrs==23.2.0
-certifi==2024.2.2
-charset-normalizer==3.3.2
+aiohappyeyeballs==2.4.8
+aiohttp==3.11.13
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.8.0
+attrs==25.1.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
 diskcache==5.6.3
 distro==1.9.0
-filelock==3.13.1
-frozenlist==1.4.1
-fsspec==2024.2.0
-groq==0.5.0
+filelock==3.17.0
+frozenlist==1.5.0
+fsspec==2025.2.0
+groq==0.18.0
 h11==0.14.0
-httpcore==1.0.5
-httpx==0.27.0
-huggingface-hub==0.20.3
-idna==3.6
-Jinja2==3.1.3
-llama_cpp_python==0.2.50
-MarkupSafe==2.1.5
-multidict==6.0.5
-networkx==3.3
-numpy==1.26.4
-packaging==23.2
-pydantic==2.7.0
-pydantic_core==2.18.1
-PyYAML==6.0.1
-requests==2.31.0
-scipy==1.12.0
+httpcore==1.0.7
+httpx==0.28.1
+huggingface-hub==0.29.2
+idna==3.10
+Jinja2==3.1.5
+llama_cpp_python==0.3.7
+MarkupSafe==3.0.2
+multidict==6.1.0
+networkx==3.4.2
+numpy==2.2.3
+packaging==24.2
+propcache==0.3.0
+pydantic==2.10.6
+pydantic_core==2.27.2
+PyYAML==6.0.2
+requests==2.32.3
+scipy==1.15.2
 sniffio==1.3.1
-tqdm==4.66.2
-typing_extensions==4.9.0
-urllib3==2.2.1
-yarl==1.9.4
+tqdm==4.67.1
+typing_extensions==4.12.2
+urllib3==2.3.0
+yarl==1.18.3
